create main page and categories swagger documentation
