# app/Http/Controllers/Api/V1/PostsController.php
@@ -19,6 +19,41 @@ class PostsController extends Controller
     /**
      * Display a listing of the resource.
      */
+
+    /**
+     * @OA\Get(
+     * path="/main/blog",
+     * summary="List all blogs",
+     * description=" view all blogs",
+     * tags={"Main Page"},
+     *
+    @OA\Response(
+     * response=200,
+     * description="Successfull (Ok)",
+     * ),
+     * @OA\Response(
+     * response=403,
+     * description="Forbidden"
+     * ),
+     *
+     * @OA\Response(
+     * response=401,
+     * description="Unauthenticated"
+     * ),
+     * @OA\Response(
+     * response=404,
+     * description="Page not found"
+     * ),
+     *  @OA\Response(
+     * response=422,
+     * description="Unprocessable Entity"
+     * ),
+     *  @OA\Response(
+     * response=500,
+     * description="Internal server error"
+     * ),
+     * )
+     */
     public function index()
     {
         try {
@@ -45,6 +80,48 @@ class PostsController extends Controller
 
     /**
      * Display the specified resource.
+     */
+
+    /**
+     * @OA\Get(
+     * path="/main/blog/{blog_uuid}",
+     * summary="view a single blog",
+     * description="view a blog",
+     * tags={"Main Page"},
+     * @OA\Parameter(
+     *          name="blog_uuid",
+     *          description="blog id",
+     *          required=true,
+     *          in="path",
+     *
+     *      ),
+     *
+    @OA\Response(
+     * response=200,
+     * description="Successfull (Ok)",
+     * ),
+     * @OA\Response(
+     * response=403,
+     * description="Forbidden"
+     * ),
+     *
+     * @OA\Response(
+     * response=401,
+     * description="Unauthenticated"
+     * ),
+     * @OA\Response(
+     * response=404,
+     * description="Page not found"
+     * ),
+     *  @OA\Response(
+     * response=422,
+     * description="Unprocessable Entity"
+     * ),
+     *  @OA\Response(
+     * response=500,
+     * description="Internal server error"
+     * ),
+     * )
      */
     public function show($post_uuid)
     {
